--- a/app/src/main/res/layout/fragment_note_edit.xml
+++ b/app/src/main/res/layout/fragment_note_edit.xml
@@ -46,17 +46,17 @@
         android:id="@+id/messageScrollView"
         android:layout_above="@+id/saveNote">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:minLines="3"
-        android:text="New Text"
-        android:id="@+id/editNoteMessage"
-        android:textSize="18sp"
-        android:textColor="#000000"
-        android:background="@null"
-        android:inputType="textMultiLine"
-        android:gravity="top"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minLines="3"
+            android:text="New Text"
+            android:id="@+id/editNoteMessage"
+            android:textSize="18sp"
+            android:textColor="#000000"
+            android:background="@null"
+            android:inputType="textMultiLine"
+            android:gravity="top"/>
     </ScrollView>
 
     <Button
